Bug 288138 - Unavail shape creates invalid xml on saving
Summary: Unavail shape creates invalid xml on saving
Status: RESOLVED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: flake (other bugs)
Version First Reported In: 2.4-snapshots
Platform: Unlisted Binaries Linux
: NOR grave
Target Milestone: ---
Assignee: Calligra Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-03 14:42 UTC by T Zachmann
Modified: 2011-12-03 14:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description T Zachmann 2011-12-03 14:42:02 UTC
Version:           2.4-snapshots
OS:                Linux

When the attached document is loaded and saved in calligra it produces invalid odf on saving.

Reproducible: Always

Steps to Reproduce:
Load the attached file.
Save the attached file.
Try to load the saved file

Actual Results:  
The saved document can't be loaded again.

Expected Results:  
The saved document should be loaded again without problems
Comment 1 T Zachmann 2011-12-03 14:48:50 UTC
As it was not possible to upload the file to bugzilla here the link to it.

http://www.zagge.de/anchor/bug/ttt.astro.su.se%252F~mstri%252Fbonn_1.odp
Comment 2 T Zachmann 2011-12-03 14:53:33 UTC
Git commit 6d46ddc06ecc32b8b1f79803a95aac1de313fd3c by Thorsten Zachmann.
Committed on 03/12/2011 at 15:50.
Pushed by zachmann into branch 'master'.

Create valid odf on saving of Unavail shape

This fixes bug 288138 - Unavail shape creates invalid xml on saving

BUG: 288138

M  +6    -3    libs/flake/KoUnavailShape.cpp

http://commits.kde.org/calligra/6d46ddc06ecc32b8b1f79803a95aac1de313fd3c