Create valid odf on saving of Unavail shape

This fixes bug 288138 - Unavail shape creates invalid xml on saving

BUG: 288138